test/parse-errors/let-must-have-then.nz.ast.tata
file-ast(
	imports: []
	exports: []
	specs: []
	aliases: []
	structs: []
	funs: [
		fun-decl(
			public?: true
			sig: sig-ast(range(0, 8), f, inststruct(range(2, 6), void), [])
			body: let(name-range(range(10, 11), a), literal(numeric, "1"), bogus))])
